Added prefixes to the tcl scripts (prevents .vhd file conflicts)

--- a/hls/arp_server_subnet/make.tcl.in
+++ b/hls/arp_server_subnet/make.tcl.in
@@ -13,6 +13,7 @@ add_files ${CMAKE_CURRENT_SOURCE_DIR}/arp_server_subnet.cpp -cflags "-I${CMAKE_C
 
 add_files -tb ${CMAKE_CURRENT_SOURCE_DIR}/test_arp_server_subnet.cpp -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
 
+config_rtl -prefix arp_subnet_
 
 
 #Check which command
