--- a/hls/mac_ip_encode/make.tcl.in
+++ b/hls/mac_ip_encode/make.tcl.in
@@ -14,6 +14,7 @@ add_files ${CMAKE_CURRENT_SOURCE_DIR}/mac_ip_encode.cpp -cflags "-I${CMAKE_CURRE
 
 add_files -tb ${CMAKE_CURRENT_SOURCE_DIR}/test_mac_ip_encode.cpp
 
+config_rtl -prefix mac_ip_encode_
 
 #Check which command
 set command [lindex $argv 2]
