--- a/hls/iperf_udp/make.tcl.in
+++ b/hls/iperf_udp/make.tcl.in
@@ -12,6 +12,7 @@ add_files ${CMAKE_CURRENT_SOURCE_DIR}/iperf_udp.cpp -cflags "-I${CMAKE_CURRENT_B
 
 add_files -tb ${CMAKE_CURRENT_SOURCE_DIR}/test_iperf_udp.cpp
 
+config_rtl -prefix iperf_udp_
 
 #Check which command
 set command [lindex $argv 2]
