--- a/hls/ipv4/make.tcl.in
+++ b/hls/ipv4/make.tcl.in
@@ -14,6 +14,7 @@ add_files ${CMAKE_CURRENT_SOURCE_DIR}/ipv4.cpp -cflags "-I${CMAKE_CURRENT_BINARY
 
 #add_files -tb ${CMAKE_CURRENT_SOURCE_DIR}/test_ipv4.cpp
 
+config_rtl -prefix ipv4_
 
 #Check which command
 set command [lindex $argv 2]
