--- a/hls/rocev2/make.tcl.in
+++ b/hls/rocev2/make.tcl.in
@@ -21,12 +21,17 @@ add_files ${CMAKE_CURRENT_SOURCE_DIR}/../ib_transport_protocol/state_table.cpp -
 add_files ${CMAKE_CURRENT_SOURCE_DIR}/../ib_transport_protocol/conn_table.cpp -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
 add_files ${CMAKE_CURRENT_SOURCE_DIR}/../ib_transport_protocol/msn_table.cpp -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
 add_files ${CMAKE_CURRENT_SOURCE_DIR}/rocev2.cpp -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
-
+#add_files ${CMAKE_CURRENT_SOURCE_DIR}/rxInputFile.in -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
+#add_files ${CMAKE_CURRENT_SOURCE_DIR}/rxInput.dat -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
+add_files ${CMAKE_CURRENT_SOURCE_DIR}/write_read_read_large_receiver.in -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
+#add_files ${CMAKE_CURRENT_SOURCE_DIR}/txInputFile.in -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
+#add_files ${CMAKE_CURRENT_SOURCE_DIR}/txInput.dat -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
+add_files ${CMAKE_CURRENT_SOURCE_DIR}/rdma_txwriteread.in -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
 
 add_files -tb ${CMAKE_CURRENT_SOURCE_DIR}/test_rocev2.cpp -cflags "-I${CMAKE_CURRENT_BINARY_DIR}"
 
 
-config_rtl -disable_start_propagation
+config_rtl -disable_start_propagation -prefix rocev2_
 
 #Check which command
 set command [lindex $argv 2]
