--- a/hls/udp/make.tcl.in
+++ b/hls/udp/make.tcl.in
@@ -14,6 +14,7 @@ add_files ${CMAKE_CURRENT_SOURCE_DIR}/udp.cpp -cflags "-I${CMAKE_CURRENT_BINARY_
 
 #add_files -tb test_udp.cpp
 
+config_rtl -prefix udp_
 
 #Check which command
 set command [lindex $argv 2]
